Change status bar style to default in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Instrument Scanner">
     <meta name="theme-color" content="#007AFF">
     <title>Instrument Scanner</title>
@@ -21,6 +21,9 @@
             <!-- Scanner Container -->
             <div id="scanner-container" class="scanner-container full-screen">
                 <div id="reader"></div>
+                <div class="scan-guide">
+                    <div class="scan-guide-text">Position barcode within frame</div>
+                </div>
             </div>
 
             <!-- Form (shown after successful scan) -->
