Add search container to index.html

--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
         </div>
         
         <div class="content">
+            <div class="search-container">
+                <span class="material-symbols-rounded search-icon">search</span>
+                <input type="text" id="search-input" class="search-input" placeholder="Search instruments or students">
+                <button id="clear-search" class="clear-search hidden">
+                    <span class="material-symbols-rounded">close</span>
+                </button>
+            </div>
+
             <div class="filter-buttons">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="checked-out">Checked Out</button>
