--- a/index.html
+++ b/index.html
@@ -102,14 +102,6 @@
         </div>
         
         <div class="content">
-            <div class="search-container">
-                <span class="material-symbols-rounded search-icon">search</span>
-                <input type="text" id="search-input" class="search-input" placeholder="Search instruments or students">
-                <button id="clear-search" class="clear-search hidden">
-                    <span class="material-symbols-rounded">close</span>
-                </button>
-            </div>
-
             <div class="filter-buttons">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="checked-out">Checked Out</button>
@@ -128,6 +120,33 @@
         </div>
     </div>
 
+    <!-- Search Page -->
+    <div id="search-page" class="page">
+        <div class="header">
+            <h1>Search</h1>
+        </div>
+        
+        <div class="content">
+            <div class="search-container">
+                <span class="material-symbols-rounded search-icon">search</span>
+                <input type="text" id="search-input" class="search-input" placeholder="Search instruments or students">
+                <button id="clear-search" class="clear-search hidden">
+                    <span class="material-symbols-rounded">close</span>
+                </button>
+            </div>
+
+            <div id="search-results" class="inventory-list">
+                <!-- Search results will be dynamically added here -->
+            </div>
+
+            <div id="search-empty-state" class="empty-state">
+                <span class="material-symbols-rounded empty-icon">search</span>
+                <p>Search for instruments</p>
+                <p>Enter a name, serial number, or instrument type</p>
+            </div>
+        </div>
+    </div>
+
     <!-- Bottom Tab Bar -->
     <div class="tab-bar">
         <button class="tab-btn active" data-page="scan-page">
@@ -137,6 +156,10 @@
         <button class="tab-btn" data-page="inventory-page">
             <span class="material-symbols-rounded tab-icon">inventory_2</span>
             <span class="tab-label">Inventory</span>
+        </button>
+        <button class="tab-btn" data-page="search-page">
+            <span class="material-symbols-rounded tab-icon">search</span>
+            <span class="tab-label">Search</span>
         </button>
     </div>
 
