--- a/index.html
+++ b/index.html
@@ -147,19 +147,23 @@
         </div>
     </div>
 
-    <!-- Bottom Tab Bar -->
-    <div class="tab-bar">
-        <button class="tab-btn active" data-page="scan-page">
-            <span class="material-symbols-rounded tab-icon">qr_code_scanner</span>
-            <span class="tab-label">Scan</span>
-        </button>
-        <button class="tab-btn" data-page="inventory-page">
-            <span class="material-symbols-rounded tab-icon">inventory_2</span>
-            <span class="tab-label">Inventory</span>
-        </button>
-        <button class="tab-btn" data-page="search-page">
-            <span class="material-symbols-rounded tab-icon">search</span>
-            <span class="tab-label">Search</span>
+    <!-- Bottom Tab Bar - Floating Design -->
+    <div class="tab-bar-container">
+        <!-- Pill shape with Scan and Inventory -->
+        <div class="tab-bar-pill" data-active="scan">
+            <button class="tab-btn active" data-page="scan-page">
+                <span class="material-symbols-rounded tab-icon">qr_code_scanner</span>
+                <span class="tab-label">Scan</span>
+            </button>
+            <button class="tab-btn" data-page="inventory-page">
+                <span class="material-symbols-rounded tab-icon">inventory_2</span>
+                <span class="tab-label">Inventory</span>
+            </button>
+        </div>
+        
+        <!-- Circle shape with Search -->
+        <button class="tab-btn-circle" data-page="search-page">
+            <span class="material-symbols-rounded">search</span>
         </button>
     </div>
 
