Add data-active attribute to filter-buttons div

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         
         <div class="content">
-            <div class="filter-buttons">
+            <div class="filter-buttons" data-active="all">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="checked-out">Checked Out</button>
                 <button class="filter-btn" data-filter="checked-in">Available</button>
