Add serial number input field to form

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                     </select>
                 </div>
 
+                <div class="form-group" id="serial-number-group" style="display: none;">
+                    <label for="serial-number-input">Serial Number</label>
+                    <input type="text" id="serial-number-input" placeholder="Enter instrument serial number">
+                </div>
+
                 <div class="form-group">
                     <label for="person-name">Student Name</label>
                     <input type="text" id="person-name" placeholder="Enter student name" required>
