--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Form (shown after successful scan) -->
             <div id="scan-form" class="scan-form hidden">
                 <div class="form-group">
-                    <label for="serial-number">Serial Number</label>
+                    <label for="serial-number">Identifier</label>
                     <input type="text" id="serial-number" readonly>
                 </div>
 
