--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
             
             <!-- Status Filter -->
             <div class="filter-section">
-                <div class="filter-buttons" data-active="all">
-                    <button class="filter-btn active" data-filter="all">
+                <div class="chip-container">
+                    <button class="chip active" data-filter="all">
                         <span class="material-symbols-rounded">apps</span>
                         <span>All</span>
                     </button>
-                    <button class="filter-btn" data-filter="checked-out">
+                    <button class="chip" data-filter="checked-out">
                         <span class="material-symbols-rounded">output</span>
                         <span>Checked Out</span>
                     </button>
-                    <button class="filter-btn" data-filter="checked-in">
+                    <button class="chip" data-filter="checked-in">
                         <span class="material-symbols-rounded">inventory_2</span>
                         <span>Available</span>
                     </button>
@@ -281,4 +281,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
